--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -102,10 +102,56 @@
     <string name="ver_eng">Angielski</string>
     <string name="ver_other">Inne</string>
 
-    <string name="time_format_seconds">%1$s sek. temu</string>
-    <string name="time_format_minutes">%1$s min. temu</string>
-    <string name="time_format_hours">%1$s godz. temu</string>
-    <string name="time_format_days">%1$s dni temu</string>
-    <string name="time_yesterday">Wczoraj</string>
-    <string name="time_today">Dzisiaj</string>
+    <string name="time_just_now">przed chwilą</string>
+    <string name="time_today">dzisiaj</string>
+    <string name="time_yesterday">wczoraj</string>
+
+    <plurals name="time_seconds_ago">
+        <item quantity="one">%d sekundę temu</item>
+        <item quantity="few">%d sekundy temu</item>
+        <item quantity="many">%d sekund temu</item>
+        <item quantity="other">%d sekund temu</item>
+    </plurals>
+
+    <plurals name="time_minutes_ago">
+        <item quantity="one">%d minutę temu</item>
+        <item quantity="few">%d minuty temu</item>
+        <item quantity="many">%d minut temu</item>
+        <item quantity="other">%d minut temu</item>
+    </plurals>
+
+    <plurals name="time_hours_ago">
+        <item quantity="one">%d godzinę temu</item>
+        <item quantity="few">%d godziny temu</item>
+        <item quantity="many">%d godzin temu</item>
+        <item quantity="other">%d godzin temu</item>
+    </plurals>
+
+    <plurals name="time_days_ago">
+        <item quantity="one">%d dzień temu</item>
+        <item quantity="few">%d dni temu</item>
+        <item quantity="many">%d dni temu</item>
+        <item quantity="other">%d dni temu</item>
+    </plurals>
+
+    <plurals name="time_weeks_ago">
+        <item quantity="one">%d tydzień temu</item>
+        <item quantity="few">%d tygodnie temu</item>
+        <item quantity="many">%d tygodni temu</item>
+        <item quantity="other">%d tygodni temu</item>
+    </plurals>
+
+    <plurals name="time_months_ago">
+        <item quantity="one">%d miesiąc temu</item>
+        <item quantity="few">%d miesiące temu</item>
+        <item quantity="many">%d miesięcy temu</item>
+        <item quantity="other">%d miesięcy temu</item>
+    </plurals>
+
+    <plurals name="time_years_ago">
+        <item quantity="one">%d rok temu</item>
+        <item quantity="few">%d lata temu</item>
+        <item quantity="many">%d lat temu</item>
+        <item quantity="other">%d lat temu</item>
+    </plurals>
 </resources>
