Feat(ui): localize season titles and parse season numbers
Implemented regex parsing in DetailsScreen to extract season numbers from titles (e.g., "Sezon 01" -> 1).
Added localized string resources for season headers to allow proper translation between Polish and English.

--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -91,6 +91,8 @@
 
     <string name="play_button_desc">Odtwórz</string>
 
+    <string name="season_number">Sezon %1$d</string>
+
     <string name="ver_pl">Polski</string>
     <string name="ver_dubbing">Dubbing</string>
     <string name="ver_dubbing_cinema">Dubbing (Kino)</string>
